--- a/ticket-mgt/src/assets/main.css
+++ b/ticket-mgt/src/assets/main.css
@@ -1,12 +1,21 @@
 @import './base.css';
 
 #app {
-  max-width: 1440px;
+  max-width: 100%;
   margin: 0 auto;
-  /* padding: 2rem; */
   font-weight: normal;
-  
+  font-family: 'Urbanist', sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+}
 
-
+html {
+  height: 100%;
+}
